--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,5 @@
         "facebook/php-business-sdk": "^17.0"
     },
     "type": "microweber-module",
-    "target-dir": "calendly"
+    "target-dir": "facebook_pixel"
 }
